data/derived/fa15/progs/unify/prog0449.ml.out
Characters 97-99:
  if prod < 10 
            ^^
Error: This expression has type int but an expression was expected of type
         int list
